added loop ocr over files in folder

--- a/tesseract.ipynb
+++ b/tesseract.ipynb
@@ -33,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pytesseract\n",
     "from PIL import Image\n",
     "\n",
@@ -46,11 +47,23 @@
     "        print(f\"Error during text extraction: {e}\")\n",
     "        return None\n",
     "\n",
-    "# Beispielaufruf\n",
-    "image_path = outPath + \"image_from_pixmap.jpg\"\n",
-    "extracted_text = extract_text_with_tesseract(image_path)\n",
-    "if extracted_text:\n",
-    "    print(extracted_text)\n"
+    "# List all files in the directory\n",
+    "files = os.listdir(outPath)\n",
+    "\n",
+    "# Loop through each file in the directory\n",
+    "for file in files:\n",
+    "    # Check if the file is an image (assuming .jpg, .png, .jpeg)\n",
+    "    if file.lower().endswith(('.jpg', '.png', '.jpeg')):\n",
+    "        # Construct the full path to the image\n",
+    "        image_path = os.path.join(outPath, file)\n",
+    "        \n",
+    "        # Extract text using Tesseract\n",
+    "        extracted_text = extract_text_with_tesseract(image_path)\n",
+    "        \n",
+    "        # Print extracted text if any\n",
+    "        if extracted_text:\n",
+    "            print(f\"Extracted text from {file}:\")\n",
+    "            print(extracted_text)\n"
    ]
   }
  ],
